[tool.poetry]
name = "leetcode-python"
version = "0.1.0"
description = ""
authors = ["Emilio <16996940+milongo@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "8.3.2"
pytest-cov = "5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["build", "dist", "tests", "scripts"]
number = 4
recursive = true
targets = "src"

[tool.black]
line-length = 200
fast = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__"]
venv = "env37"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pylint.main]
max-line-length = 200
