[tool.poetry]
name = "leetcode-python"
version = "0.1.0"
description = ""
authors = ["Emilio <16996940+milongo@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "8.3.2"
pytest-cov = "5.0.0"


[tool.black]
line-length = 200
fast = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100
skip_empty = true

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__"]
venv = "env37"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pylint.main]
max-line-length = 200
